--- a/style.css
+++ b/style.css
@@ -758,6 +758,11 @@ iframe[src^="https://tryhackme.com/api/v2/badges"] {
     width: 85%;
 }
 
+.company-card img {
+    background-color: #121212;
+    box-shadow: 0 0 3px 2px #ae00ff40;
+}
+
 .company-logo-img {
     width: 150px;
     height: 150px;
